--- a/less/style.less
+++ b/less/style.less
@@ -642,8 +642,8 @@ nav.simple-flat .container-fluid {
 	
 	.sidebar-items {
 		.item {
-			padding: 0 24px;
-			line-height: 42px;
+			padding: 0 30px 0 20px;
+			line-height: 48px;
 			font-size: 14px;
 		}
 		.item:nth-child(2n+1) {
@@ -656,5 +656,9 @@ nav.simple-flat .container-fluid {
 
 	.panel-body {
 		padding: 0;
+	}
+
+	.panel {
+		box-shadow: 0 1px 1px rgba(0,0,0,.5);
 	}
 }	
