--- a/style.css
+++ b/style.css
@@ -817,8 +817,8 @@ nav.simple-flat .container-fluid .collapse form input {
   width: 250px;
 }
 .sidebar .sidebar-items .item {
-  padding: 0 24px;
-  line-height: 42px;
+  padding: 0 30px 0 20px;
+  line-height: 48px;
   font-size: 14px;
 }
 .sidebar .sidebar-items .item:nth-child(2n+1) {
@@ -829,4 +829,7 @@ nav.simple-flat .container-fluid .collapse form input {
 }
 .sidebar .panel-body {
   padding: 0;
+}
+.sidebar .panel {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
 }
