sidebar contact area

--- a/less/style.less
+++ b/less/style.less
@@ -661,4 +661,71 @@ nav.simple-flat .container-fluid {
 	.panel {
 		box-shadow: 0 1px 1px rgba(0,0,0,.5);
 	}
+}
+
+// ========================================
+// ! contact sidebar
+// ========================================
+.sidebar-contact {
+	position: fixed;
+	bottom: 100px;
+	left: 50%;
+	font-size: 16px;
+	text-align: center;
+
+	color: #D4AA6D;
+	margin-left: 585px;
+
+	a {
+		color: inherit;
+	}
+
+	width: 45px;
+
+	background: #fff;
+	border: 1px #d2d2d2 solid;
+
+	background: #fff;
+	border-bottom: none;
+	z-index: 100;
+
+	h3 {
+		line-height: 43px;
+	}
+
+	.item {
+		position: relative;
+		width: 45px;
+		height: 45px;
+		border-bottom: 1px #d2d2d2 solid;
+
+		background: url(images/side-bar-icon.png) no-repeat;
+
+		.pop {
+			position: absolute;
+			top:-1px;
+			right: 45px;
+			border: 1px #d2d2d2 solid;
+			display: none;
+			background: #fff;
+			width: 160px;
+			min-height: 45px;
+			line-height: 43px;
+
+			.qrcode {
+
+			}
+		}
+
+		&:hover .pop {
+			display: block;
+		}
+	}
+
+	.item:nth-child(2) {
+		background-position: -2px -45px;
+	}
+	.item:nth-child(3) {
+		background-position: 0 -90px;
+	}
 }	
