sedebar contact backend support

--- a/less/style.less
+++ b/less/style.less
@@ -722,10 +722,10 @@ nav.simple-flat .container-fluid {
 		}
 	}
 
-	.item:nth-child(2) {
+	.qq {
 		background-position: -2px -45px;
 	}
-	.item:nth-child(3) {
+	.phone {
 		background-position: 0 -90px;
 	}
 }	
