--- a/style.css
+++ b/style.css
@@ -669,6 +669,7 @@ footer .copyright p {
   display: block;
 }
 .dropdown-menu.sub-menu {
+  padding:40px 0 !important;
   background: -webkit-linear-gradient(270deg, #c8c8c8, rgba(245, 245, 245, 0.88) 8%, rgba(245, 245, 245, 0.88));
   background: linear-gradient(180deg, #c8c8c8, rgba(245, 245, 245, 0.88) 8%, rgba(245, 245, 245, 0.88));
   padding: 0;
@@ -837,6 +838,28 @@ nav.simple-flat .container-fluid .collapse form input {
 
 
 #contact {
-  width: 60%;
-  margin:0 auto;
+  width: 70%;
+  margin:40px auto;
 }
+.contact-submit {
+	width:130px;
+	height:50px;
+	background:#ec940e;
+	color:white;
+	font-size:20px;
+	border:none;
+}
+#contact .contact-item {
+	width:100%; 
+	float: left; 
+	color: #333333; 
+	margin-bottom: 50px; 
+	text-align: center; 
+	position: relative; 
+	padding-top: 65px; 
+	font-size: 12px; 
+}
+#contact .icon { width: 66px; height: 66px; position: absolute; left: 50%; top: 0; margin-left: -33px; display: inline-block; background-image: url(images/bg_large_icon_1.png); background-repeat: no-repeat; }
+#contact .icon1 { background-position: 0 -320px; }
+#contact .icon2 { background-position: 0 -400px; }
+#contact .icon3 { background-position: 0 -240px; }
