--- a/less/style.less
+++ b/less/style.less
@@ -729,3 +729,32 @@ nav.simple-flat .container-fluid {
 		background-position: 0 -90px;
 	}
 }	
+
+#contact {
+  width: 70%;
+  margin:40px auto;
+}
+.contact-submit {
+	width:130px;
+	height:50px;
+	background:#ec940e;
+	color:white;
+	font-size:20px;
+	border:none;
+}
+#contact .contact-item {
+	width:100%; 
+	float: left; 
+	color: #333333; 
+	margin-bottom: 50px; 
+	text-align: center; 
+	position: relative; 
+	padding-top: 65px; 
+	font-size: 12px; 
+}
+#contact .icon { width: 66px; height: 66px; position: absolute; left: 50%; top: 0; margin-left: -33px; display: inline-block; background-image: url(images/bg_large_icon_1.png); background-repeat: no-repeat; }
+#contact .icon1 { background-position: 0 -320px; }
+#contact .icon2 { background-position: 0 -400px; }
+#contact .icon3 { background-position: 0 -240px; }
+.archive-title { padding-bottom:50px; }
+.breadcrumb li a { color:#d4aa6d; }
