--- a/inc/css/admin.less
+++ b/inc/css/admin.less
@@ -62,6 +62,9 @@
 [role="form"] {
 	margin: 36px 0 0;
 }
+[role="form"].side-form {
+	margin: 12px 0 0;
+}
 
 
 // ----------------------------------------
