front count down support

--- a/less/decoration.less
+++ b/less/decoration.less
@@ -38,6 +38,17 @@
   
 }
 
+.count-down {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    left: -20px;
+    font-family: 'Glyphicons Halflings';
+    content: '\e023';
+  }
+}
+
 // ----------------------------------------
 // ! grid
 // ----------------------------------------
