--- a/style.css
+++ b/style.css
@@ -341,6 +341,15 @@ a:hover {
 .white-block-12 {
   height: 12px;
 }
+.count-down {
+  position: relative;
+}
+.count-down::before {
+  position: absolute;
+  left: -20px;
+  font-family: 'Glyphicons Halflings';
+  content: '\e023';
+}
 .img-resp-block {
   display: block;
   width: 100%;
