--- a/style.css
+++ b/style.css
@@ -936,3 +936,14 @@ nav.simple-flat .container-fluid .collapse form input {
 	padding:40px 0;
 	background:url(images/theme-navbg.png) repeat-x;
 }
+.banner .item {
+  height: 500px !important;
+}
+.custom-post-type {
+	padding-top: 40px !important;
+}
+.archive-item-list .left img { width:100%; }
+.archive-item-list .left { text-align:center; }
+.breadcrumb { padding:4px !important; }
+.btn-view-detail a { background:#ec940f; color:white; padding:3px 15px; }
+section.hotel .item a h4 { text-align:center; }
