Add carousel cover type

--- a/less/style.less
+++ b/less/style.less
@@ -58,7 +58,13 @@ body {
 
 .banner .item {
 	height: 411px;
-	overflow: hidden;;
+	overflow: hidden;
+
+	.img-container {
+		height: 500px;
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
 }
 
 .banner .carousel-caption{
