read news item & make a js to reset archive page bg-size

--- a/less/style.less
+++ b/less/style.less
@@ -291,7 +291,7 @@ footer {
 .custom-post-type {
 	background: url(images/20140512165237HBUvCo.jpg) no-repeat;
 	padding-top: 326px;
-	background-size: cover;
+	background-size: contain;
 }
 
 // ----------------------------------------
