front style for  news

--- a/less/basic.less
+++ b/less/basic.less
@@ -252,6 +252,10 @@ a:hover {
 	padding-left: @size-xs;
 }
 
+.pd-l-sm {
+     padding-left: @size-sm;
+}
+
 // ----------------------------------------
 // ! a link
 // ----------------------------------------
