--- a/less/style.less
+++ b/less/style.less
@@ -742,6 +742,14 @@ nav.simple-flat .container-fluid {
 }	
 
 
+// ----------------------------------------
+// ! news
+// ----------------------------------------
+.news-item {
+	padding: 12px;
+}
+
+
 
 /*added by Mansy*/
 #contact {
