simple normal template of page & template of News

--- a/less/style.less
+++ b/less/style.less
@@ -766,6 +766,22 @@ nav.simple-flat .container-fluid {
 	}
 }
 
+.custom-single.post {
+	min-height: 500px;
+}
+
+// ----------------------------------------
+// ! page
+// ----------------------------------------
+.main-content {
+	min-height: 500px;
+	padding: 36px 0;
+
+	.page-title {
+		font-size: 24px;
+	}
+}
+
 
 
 /*added by Mansy*/
