--- a/style.css
+++ b/style.css
@@ -965,7 +965,10 @@ nav.simple-flat .container-fluid .collapse form input {
 .mobile-header {
   background: black;
   height: 48px;
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
 }
 .mobile-header .logo {
   position: absolute;
@@ -996,25 +999,36 @@ html {
 }
 body.mobile {
   height: 100%;
-}
-body.mobile .page.mobile-nav-open {
-  -webkit-transform: translateX(240px);
-  -ms-transform: translateX(240px);
-  transform: translateX(240px);
+  width: 100%;
+  overflow: hidden;
 }
 body.mobile .page {
-  -webkit-transition: -webkit-transform .35s ease;
-  transition: transform .35s ease;
-  position: relative;
-  min-height: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background: #fafafa;
+  overflow: auto;
+  overflow: scroll;
+}
+body.mobile .page .mobile-nav-mask {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.85);
+  display: none;
+}
+body.mobile .page.mobile-nav-open .mobile-nav-mask {
+  display: block;
 }
 .mobile-nav {
   position: absolute;
   padding: 24px 0;
-  left: -240px;
   width: 240px;
   top: 0;
+  bottom: 0;
   height: 100%;
   background: #555;
   box-shadow: inset -2px 0 2px #000000;
@@ -1033,6 +1047,25 @@ body.mobile .page {
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 48px;
+  background: rgba(0, 0, 0, 0.8);
+}
+.mobile-footer .phone-call {
+  position: absolute;
+  left: 50%;
+  bottom: 3px;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  display: block;
+  height: 72px;
+  width: 72px;
+  border-radius: 36px;
+  background: #FD9400;
+  color: #fff;
+  font-size: 36px;
+  line-height: 80px;
+  text-align: center;
 }
 /*added by Mansy*/
 #contact {
