--- a/less/style.less
+++ b/less/style.less
@@ -872,6 +872,7 @@ body.mobile {
 		background: #fafafa;
 		overflow: auto;
 		overflow: scroll;
+		padding-top: 48px;
 
 		.mobile-nav-mask {
 			//transition: .35s ease;
