--- a/less/style.less
+++ b/less/style.less
@@ -865,7 +865,7 @@ body.mobile {
 	overflow: hidden;
 
 	.page {
-		//transition: left .35s ease;
+		transition: left .35s ease;
 		position: absolute;
 		width: 100%;
 		height: 100%;
@@ -873,30 +873,10 @@ body.mobile {
 		overflow: auto;
 		overflow: scroll;
 		padding-top: 48px;
-
-		.mobile-nav-mask {
-			//transition: .35s ease;
-			position: fixed;
-			z-index: 999;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			background: rgba(0, 0, 0, 0.85);
-			display: none;
-		}
 	}
 
 	.page.mobile-nav-open {
-		//left: 240px;
-
-		.mobile-nav-mask {
-			display: block;
-		}
-
-		.mobile-nav-mask {
-			//left: 240px;
-		}
+		left: 240px;
 	}
 }
 
