--- a/style.css
+++ b/style.css
@@ -1003,6 +1003,8 @@ body.mobile {
   overflow: hidden;
 }
 body.mobile .page {
+  -webkit-transition: left .35s ease;
+  transition: left .35s ease;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1011,18 +1013,8 @@ body.mobile .page {
   overflow: scroll;
   padding-top: 48px;
 }
-body.mobile .page .mobile-nav-mask {
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.85);
-  display: none;
-}
-body.mobile .page.mobile-nav-open .mobile-nav-mask {
-  display: block;
+body.mobile .page.mobile-nav-open {
+  left: 240px;
 }
 .mobile-nav {
   position: absolute;
