--- a/style.css
+++ b/style.css
@@ -472,6 +472,19 @@ section.slideshow {
 }
 section.slideshow .item a {
   display: block;
+  position: relative;
+}
+section.slideshow .item a .img-wrapper {
+  position: relative;
+  padding-top: 60%;
+  overflow: hidden;
+}
+section.slideshow .item a .img-wrapper img {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 section.slideshow .item a h4 {
   font-size: 16px;
