--- a/less/style.less
+++ b/less/style.less
@@ -967,6 +967,48 @@ body.mobile {
 	}
 }
 
+// ----------------------------------------
+// ! share
+// ----------------------------------------
+.share {
+
+	a {
+		background: #B5B5B5 !important;
+		color: #fff;
+		text-align: center;
+		font-size: 20px;
+		line-height: 38px;
+		border-radius: 3px;
+	}
+
+	.d-icon .bds_more.share {
+		text-indent: 0;
+		background-image: none !important;
+	}
+
+	.d-icon {
+		float: right;
+		padding: 15px 0;
+		>* {
+			float: left;
+			margin-left: 8px;
+		}
+	}
+
+	[data-ride="mark-like"] {
+		display: block;
+		width: 37px;
+		height: 37px;
+
+		text-align: left;	
+		padding-left: 7.5px;
+
+		&.like {
+			background:#c00 !important;
+		}
+	}
+}
+
 
 
 
