--- a/style.css
+++ b/style.css
@@ -1091,6 +1091,36 @@ body.mobile.mobile-nav-open .mobile-footer {
   line-height: 80px;
   text-align: center;
 }
+.share a {
+  background: #B5B5B5 !important;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  line-height: 38px;
+  border-radius: 3px;
+}
+.share .d-icon .bds_more.share {
+  text-indent: 0;
+  background-image: none !important;
+}
+.share .d-icon {
+  float: right;
+  padding: 15px 0;
+}
+.share .d-icon > * {
+  float: left;
+  margin-left: 8px;
+}
+.share [data-ride="mark-like"] {
+  display: block;
+  width: 37px;
+  height: 37px;
+  text-align: left;
+  padding-left: 7.5px;
+}
+.share [data-ride="mark-like"].like {
+  background: #c00 !important;
+}
 /*added by Mansy*/
 #contact {
   width: 70%;
