--- a/less/style.less
+++ b/less/style.less
@@ -1013,6 +1013,19 @@ body.mobile {
 	footer {
 		text-align: center;
 	}
+
+	.archive-item-list .right, .archive-item-list .left {
+		width: 100%;
+		height: 50%;
+	}
+
+	.archive-item-list .right {
+		top: 50%;
+	}
+
+	.archive-item-list .item {
+		height: 480px;
+	}
 }
 
 
