fix single page responsive
1. change col-sm to col-xs for header area.
2. add responsive css to slide show.

--- a/less/style.less
+++ b/less/style.less
@@ -1009,6 +1009,12 @@ body.mobile {
 	}
 }
 
+@media (max-width: 992px) {
+	.post-showcase .item {
+		height: 300px;
+	}
+}
+
 @media (max-width: 720px) {
 	footer {
 		text-align: center;
@@ -1025,6 +1031,20 @@ body.mobile {
 
 	.archive-item-list .item {
 		height: 480px;
+	}
+
+	.post-showcase .item {
+		height: 240px;
+
+		.img-responsive {
+			height: auto;
+		}
+	}
+}
+
+@media (max-width: 480px) {
+	.post-showcase .item {
+		height: 200px;
 	}
 }
 
