--- a/less/style.less
+++ b/less/style.less
@@ -812,13 +812,17 @@ nav.simple-flat .container-fluid {
 	.page-title {
 		font-size: 24px;
 	}
+}
+
+// post content
+#main-content {
 
 	p {
 		text-indent: 2em;
 	}
 }
 
-// ----------------------------------------
+// ----------------------------------------ddddddddddddd
 // ! mobile
 // ----------------------------------------
 .mobile-content {
