multi-qq supprot

--- a/less/style.less
+++ b/less/style.less
@@ -767,6 +767,10 @@ nav.simple-flat .container-fluid {
 
 	.qq {
 		background-position: -2px -45px;
+
+		.pop a{
+			display: block;
+		}
 	}
 	.phone {
 		background-position: 0 -90px;
