--- a/less/style.less
+++ b/less/style.less
@@ -1021,6 +1021,33 @@ body.mobile {
 	}
 }
 
+// ----------------------------------------
+// ! pagination of archive
+// ----------------------------------------
+.pagination-nav {
+	margin-bottom: 48px;
+	text-align: right;
+
+	.page-numbers {
+		display: inline-block;
+		width: 32px;
+		height: 32px;
+		color: #777;
+		background: #fff;
+		border: 1px solid rgba(0, 0, 0, 0.2);
+		line-height: 32px;
+		text-align: center;
+	}
+
+	.next, .prev {
+		width: 80px;
+	}
+
+	.current {
+		background: #eee;
+	}
+}
+
 @media (max-width: 992px) {
 	.post-showcase .item {
 		height: 300px;
