--- a/style.css
+++ b/style.css
@@ -516,8 +516,8 @@ section.slideshow .bg-icon-gray-right {
   left: 50%;
   position: absolute;
   -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 section.slideshow .bg-icon-gray-left {
   background-position: 0 -100px;
@@ -763,8 +763,8 @@ footer .copyright p {
   left: 50%;
   top: 40%;
   -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 .dropdown-menu.sub-menu li a[href*="ed"]::before {
   content: "\f19c";
@@ -799,8 +799,8 @@ nav.simple-flat .container-fluid .navbar-header {
   top: 50%;
   left: 0;
   -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 nav.simple-flat .container-fluid .navbar-header a {
   height: auto;
@@ -939,12 +939,12 @@ nav.simple-flat .container-fluid .collapse form input {
 .news-item a {
   color: #777;
   -webkit-transition: color .65s;
-          transition: color .65s;
+  transition: color .65s;
 }
 .news-item a:hover {
   color: #000;
   -webkit-transition: none;
-          transition: none;
+  transition: none;
 }
 .news-item .time {
   color: #aaa;
@@ -1007,8 +1007,8 @@ nav.simple-flat .container-fluid .collapse form input {
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   height: 36px;
 }
 .mobile-header .logo img {
@@ -1023,8 +1023,8 @@ nav.simple-flat .container-fluid .collapse form input {
   left: 15px;
   top: 50%;
   -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 html {
   height: 100%;
@@ -1044,14 +1044,14 @@ body.mobile .page,
 body.mobile .mobile-header,
 body.mobile .mobile-footer {
   -webkit-transition: -webkit-transform .35s ease;
-          transition: transform .35s ease;
+  transition: transform .35s ease;
 }
 body.mobile.mobile-nav-open .page,
 body.mobile.mobile-nav-open .mobile-header,
 body.mobile.mobile-nav-open .mobile-footer {
   -webkit-transform: translateX(240px);
-      -ms-transform: translateX(240px);
-          transform: translateX(240px);
+  -ms-transform: translateX(240px);
+  transform: translateX(240px);
 }
 .mobile-nav {
   position: absolute;
@@ -1085,8 +1085,8 @@ body.mobile.mobile-nav-open .mobile-footer {
   left: 50%;
   bottom: 3px;
   -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
   display: block;
   height: 72px;
   width: 72px;
@@ -1126,6 +1126,27 @@ body.mobile.mobile-nav-open .mobile-footer {
 }
 .share [data-ride="mark-like"].like {
   background: #c00 !important;
+}
+.pagination-nav {
+  margin-bottom: 48px;
+  text-align: right;
+}
+.pagination-nav .page-numbers {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  color: #777;
+  background: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  line-height: 32px;
+  text-align: center;
+}
+.pagination-nav .next,
+.pagination-nav .prev {
+  width: 80px;
+}
+.pagination-nav .current {
+  background: #eee;
 }
 @media (max-width: 992px) {
   .post-showcase .item {
