add hover effect to pagination.

--- a/less/style.less
+++ b/less/style.less
@@ -1037,6 +1037,10 @@ body.mobile {
 		border: 1px solid rgba(0, 0, 0, 0.2);
 		line-height: 32px;
 		text-align: center;
+
+		&:hover {
+			background: #fafafa;
+		}
 	}
 
 	.next, .prev {
@@ -1044,7 +1048,8 @@ body.mobile {
 	}
 
 	.current {
-		background: #eee;
+		background: #f3f3f3;
+		color: #aaa;
 	}
 }
 
