--- a/inc/css/admin.css
+++ b/inc/css/admin.css
@@ -85,6 +85,12 @@
 .showcase .item .close:hover {
   color: #fff;
 }
+.title-content .tab-content {
+  padding-top: 12px;
+}
+.title-content input {
+  margin-bottom: 12px;
+}
 /* Small devices (tablets, 480px and up) */
 /* @media (min-width: 480px) { } */
 /* Small devices (tablets, 768px and up) */
