--- a/inc/css/admin.less
+++ b/inc/css/admin.less
@@ -113,6 +113,16 @@
 	}
 }
 
+.title-content {
+	.tab-content {
+		padding-top: 12px;
+	}
+
+	input {
+		margin-bottom: 12px;
+	}
+}
+
 /* Small devices (tablets, 480px and up) */
 /* @media (min-width: 480px) { } */
 
