--- a/style.css
+++ b/style.css
@@ -1152,6 +1152,65 @@ body.mobile.mobile-nav-open .mobile-footer {
   background: #f3f3f3;
   color: #aaa;
 }
+#service_process title,
+#service_process content {
+  display: block;
+  padding-left: 48px;
+  position: relative;
+}
+#service_process title {
+  color: #D3A871;
+  font-size: 16px;
+}
+#service_process title::before {
+  position: absolute;
+  left: 6px;
+  top: 3px;
+  content: '1';
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  color: #fff;
+  background: #D3A871;
+  font-family: 'Arial';
+  text-align: center;
+  line-height: 22px;
+}
+#service_process content {
+  padding-bottom: 12px;
+}
+#service_process content::before {
+  position: absolute;
+  left: 16px;
+  content: ' ';
+  width: 2px;
+  height: 100%;
+  background: #D3A871;
+}
+#service_process title:nth-of-type(2)::before {
+  content: '2';
+}
+#service_process title:nth-of-type(3)::before {
+  content: '3';
+}
+#service_process title:nth-of-type(4)::before {
+  content: '4';
+}
+#service_process title:nth-of-type(5)::before {
+  content: '5';
+}
+#service_process title:nth-of-type(6)::before {
+  content: '6';
+}
+#service_process title:nth-of-type(7)::before {
+  content: '7';
+}
+#service_process title:nth-of-type(8)::before {
+  content: '8';
+}
+#service_process title:nth-of-type(9)::before {
+  content: '9';
+}
 @media (max-width: 992px) {
   .post-showcase .item {
     height: 300px;
